
[TestArrayTypes/simple_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:1-1:7,
    },
    span: 1:1-1:9,
}
---

[TestArrayTypes/number_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 1:1-1:7,
    },
    span: 1:1-1:9,
}
---

[TestArrayTypes/nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:1-1:7,
        },
        span: 1:1-1:9,
    },
    span: 1:1-1:11,
}
---

[TestArrayTypes/triple_nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:1-1:7,
            },
            span: 1:1-1:9,
        },
        span: 1:1-1:11,
    },
    span: 1:1-1:13,
}
---

[TestArrayTypes/array_of_type_reference - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        span: 1:1-1:4,
    },
    span: 1:1-1:6,
}
---

[TestArrayTypes/array_of_union - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:11-1:17,
                },
            },
            span: 1:2-1:17,
        },
        span: 1:1-1:18,
    },
    span: 1:1-1:20,
}
---

[TestArrayTypes/array_of_intersection - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:2-1:5,
                    },
                    span: 1:2-1:5,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Bar",
                        span: 1:8-1:11,
                    },
                    span: 1:8-1:11,
                },
            },
            span: 1:2-1:11,
        },
        span: 1:1-1:12,
    },
    span: 1:1-1:14,
}
---

[TestArrayTypes/array_with_type_args - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Array",
            span: 1:1-1:6,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:7-1:13,
            },
        },
        span: 1:1-1:14,
    },
    span: 1:1-1:16,
}
---

[TestArrayTypes/qualified_name_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            Right: &dts_parser.Ident{
                Name: "Bar",
                span: 1:5-1:8,
            },
        },
        span: 1:1-1:8,
    },
    span: 1:1-1:10,
}
---

[TestTupleTypes/empty_tuple - 1]
&dts_parser.TupleType{
    span: 1:1-1:3,
}
---

[TestTupleTypes/single_element - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
    },
    span: 1:1-1:9,
}
---

[TestTupleTypes/two_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:17,
}
---

[TestTupleTypes/three_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            span: 1:10-1:16,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:18-1:25,
            },
            span: 1:18-1:25,
        },
    },
    span: 1:1-1:26,
}
---

[TestTupleTypes/with_primitives - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                span: 1:2-1:5,
            },
            span: 1:2-1:5,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 1,
                span: 1:7-1:14,
            },
            span: 1:7-1:14,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 5,
                span: 1:16-1:21,
            },
            span: 1:16-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestTupleTypes/with_type_references - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1:2-1:5,
                },
                span: 1:2-1:5,
            },
            span: 1:2-1:5,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 1:7-1:10,
                },
                span: 1:7-1:10,
            },
            span: 1:7-1:10,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: 1:12-1:15,
                },
                span: 1:12-1:15,
            },
            span: 1:12-1:15,
        },
    },
    span: 1:1-1:16,
}
---

[TestTupleTypes/mixed_types - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1:10-1:13,
                },
                span: 1:10-1:13,
            },
            span: 1:10-1:13,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:15-1:21,
            },
            span: 1:15-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestTupleTypes/with_union_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:2-1:8,
                    },
                    &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:11-1:17,
                    },
                },
                span: 1:2-1:17,
            },
            span: 1:2-1:17,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:19-1:26,
            },
            span: 1:19-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestTupleTypes/with_intersection_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Foo",
                            span: 1:2-1:5,
                        },
                        span: 1:2-1:5,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 1:8-1:11,
                        },
                        span: 1:8-1:11,
                    },
                },
                span: 1:2-1:11,
            },
            span: 1:2-1:11,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: 1:13-1:16,
                },
                span: 1:13-1:16,
            },
            span: 1:13-1:16,
        },
    },
    span: 1:1-1:17,
}
---

[TestTupleTypes/nested_tuples - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.TupleType{
                Elements: []dts_parser.TupleElement{
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:3-1:9,
                        },
                        span: 1:3-1:9,
                    },
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:11-1:17,
                        },
                        span: 1:11-1:17,
                    },
                },
                span: 1:2-1:18,
            },
            span: 1:2-1:18,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TupleType{
                Elements: []dts_parser.TupleElement{
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 8,
                            span: 1:21-1:28,
                        },
                        span: 1:21-1:28,
                    },
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            span: 1:30-1:33,
                        },
                        span: 1:30-1:33,
                    },
                },
                span: 1:20-1:34,
            },
            span: 1:20-1:34,
        },
    },
    span: 1:1-1:35,
}
---

[TestTupleTypes/tuple_of_arrays - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                span: 1:2-1:10,
            },
            span: 1:2-1:10,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:12-1:18,
                },
                span: 1:12-1:20,
            },
            span: 1:12-1:20,
        },
    },
    span: 1:1-1:21,
}
---

[TestTupleTypes/array_of_tuples - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                span: 1:2-1:8,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:10-1:16,
                },
                span: 1:10-1:16,
            },
        },
        span: 1:1-1:17,
    },
    span: 1:1-1:19,
}
---

[TestTupleWithOptionalElements/single_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            Optional: true,
            span: 1:2-1:8,
        },
    },
    span: 1:1-1:10,
}
---

[TestTupleWithOptionalElements/optional_at_end - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            Optional: true,
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:18,
}
---

[TestTupleWithOptionalElements/multiple_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            Optional: true,
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:11-1:17,
            },
            Optional: true,
            span: 1:11-1:17,
        },
    },
    span: 1:1-1:19,
}
---

[TestTupleWithOptionalElements/mixed_optional_required - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            Optional: true,
            span: 1:10-1:16,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:19-1:26,
            },
            span: 1:19-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestTupleWithRestElements/rest_at_end - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:13-1:19,
                },
                span: 1:13-1:21,
            },
            Rest: true,
            span: 1:10-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestTupleWithRestElements/rest_only - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:5-1:11,
                },
                span: 1:5-1:13,
            },
            Rest: true,
            span: 1:2-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestTupleWithRestElements/multiple_before_rest - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            span: 1:10-1:16,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 1:21-1:28,
                },
                span: 1:21-1:30,
            },
            Rest: true,
            span: 1:18-1:30,
        },
    },
    span: 1:1-1:31,
}
---

[TestTupleWithRestElements/rest_with_union - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.ParenthesizedType{
                    Type: &dts_parser.UnionType{
                        Types: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:14-1:20,
                            },
                            &dts_parser.PrimitiveType{
                                Kind: 8,
                                span: 1:23-1:30,
                            },
                        },
                        span: 1:14-1:30,
                    },
                    span: 1:13-1:31,
                },
                span: 1:13-1:33,
            },
            Rest: true,
            span: 1:10-1:33,
        },
    },
    span: 1:1-1:34,
}
---

[TestTupleWithLabels/single_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
    },
    span: 1:1-1:12,
}
---

[TestTupleWithLabels/multiple_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:13-1:14,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:16-1:22,
            },
            span: 1:13-1:22,
        },
    },
    span: 1:1-1:23,
}
---

[TestTupleWithLabels/mixed_labeled_unlabeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:10-1:11,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:13-1:19,
            },
            span: 1:10-1:19,
        },
    },
    span: 1:1-1:20,
}
---

[TestTupleWithLabels/labeled_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:6-1:12,
            },
            Optional: true,
            span: 1:2-1:12,
        },
    },
    span: 1:1-1:13,
}
---

[TestTupleWithLabels/labeled_with_colon_and_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:6-1:12,
            },
            Optional: true,
            span: 1:2-1:12,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:14-1:15,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:17-1:23,
            },
            span: 1:14-1:23,
        },
    },
    span: 1:1-1:24,
}
---

[TestTupleWithLabels/labeled_rest - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "rest",
                span: 1:16-1:20,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:22-1:28,
                },
                span: 1:22-1:30,
            },
            Rest: true,
            span: 1:13-1:30,
        },
    },
    span: 1:1-1:31,
}
---

[TestTupleWithLabels/all_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:13-1:14,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:16-1:22,
            },
            span: 1:13-1:22,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "z",
                span: 1:24-1:25,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:27-1:34,
            },
            span: 1:24-1:34,
        },
    },
    span: 1:1-1:35,
}
---

[TestTupleEdgeCases/trailing_comma - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                span: 1:2-1:8,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:10-1:16,
                },
                span: 1:10-1:16,
            },
        },
        span: 1:1-1:18,
    },
}
---

[TestTupleEdgeCases/single_trailing_comma - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                span: 1:2-1:8,
            },
        },
        span: 1:1-1:10,
    },
}
---

[TestTupleEdgeCases/multiple_trailing_commas - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:9-1:10,
            Message: "Expected tuple element",
        },
        &dts_parser.Error{
            Span: 1:9-1:10,
            Message: "Expected 13 but got 16",
        },
    },
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                span: 1:2-1:8,
            },
        },
        span: 1:1-1:8,
    },
}
---

[TestTupleEdgeCases/spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:3-1:9,
                },
                span: 1:3-1:9,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:12-1:18,
                },
                span: 1:12-1:18,
            },
        },
        span: 1:1-1:20,
    },
}
---

[TestTupleEdgeCases/newlines - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 2:3-2:9,
                },
                span: 2:3-2:9,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 3:3-3:9,
                },
                span: 3:3-3:9,
            },
        },
        span: 1:1-4:2,
    },
}
---

[TestArrayAndTupleCombinations/union_with_array - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:1-1:7,
            },
            span: 1:1-1:9,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:12-1:18,
            },
            span: 1:12-1:20,
        },
    },
    span: 1:1-1:20,
}
---

[TestArrayAndTupleCombinations/union_with_tuple - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:2-1:8,
                    },
                    span: 1:2-1:8,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:10-1:16,
                    },
                    span: 1:10-1:16,
                },
            },
            span: 1:1-1:17,
        },
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 1:21-1:28,
                    },
                    span: 1:21-1:28,
                },
            },
            span: 1:20-1:29,
        },
    },
    span: 1:1-1:29,
}
---

[TestArrayAndTupleCombinations/intersection_with_array - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1:1-1:4,
                },
                span: 1:1-1:4,
            },
            span: 1:1-1:6,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 1:9-1:12,
                },
                span: 1:9-1:12,
            },
            span: 1:9-1:14,
        },
    },
    span: 1:1-1:14,
}
---

[TestArrayAndTupleCombinations/array_of_union - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:2-1:8,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:11-1:17,
                },
            },
            span: 1:2-1:17,
        },
        span: 1:1-1:18,
    },
    span: 1:1-1:20,
}
---

[TestArrayAndTupleCombinations/tuple_of_unions - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:2-1:8,
                    },
                    &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:11-1:17,
                    },
                },
                span: 1:2-1:17,
            },
            span: 1:2-1:17,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 1:19-1:26,
                    },
                    &dts_parser.PrimitiveType{
                        span: 1:29-1:32,
                    },
                },
                span: 1:19-1:32,
            },
            span: 1:19-1:32,
        },
    },
    span: 1:1-1:33,
}
---

[TestArrayAndTupleCombinations/complex_nested - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 1:1-1:6,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TupleType{
                    Elements: []dts_parser.TupleElement{
                        dts_parser.TupleElement{
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 1:8-1:14,
                            },
                            span: 1:8-1:14,
                        },
                        dts_parser.TupleElement{
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 1:16-1:22,
                            },
                            span: 1:16-1:22,
                        },
                    },
                    span: 1:7-1:23,
                },
            },
            span: 1:1-1:24,
        },
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Foo",
                                span: 1:28-1:31,
                            },
                            span: 1:28-1:31,
                        },
                        span: 1:28-1:33,
                    },
                    span: 1:28-1:33,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 1:35-1:38,
                        },
                        span: 1:35-1:38,
                    },
                    span: 1:35-1:38,
                },
            },
            span: 1:27-1:39,
        },
    },
    span: 1:1-1:39,
}
---

[TestArrayAndTupleCombinations/parenthesized_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:2-1:8,
        },
        span: 1:1-1:9,
    },
    span: 1:1-1:11,
}
---

[TestArrayAndTupleCombinations/array_in_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 1:1-1:4,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:5-1:11,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:13-1:19,
            },
            span: 1:13-1:21,
        },
    },
    span: 1:1-1:22,
}
---

[TestArrayAndTupleCombinations/tuple_in_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 1:1-1:7,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1:9-1:15,
                    },
                    span: 1:9-1:15,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 1:17-1:23,
                    },
                    span: 1:17-1:23,
                },
            },
            span: 1:8-1:24,
        },
    },
    span: 1:1-1:25,
}
---

[TestArrayVsIndexAccess/array_type - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:1-1:7,
    },
    span: 1:1-1:9,
}
---

[TestArrayVsIndexAccess/empty_brackets_after_type - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        span: 1:1-1:4,
    },
    span: 1:1-1:6,
}
---

[TestArrayVsIndexAccess/nested_arrays - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:1-1:7,
        },
        span: 1:1-1:9,
    },
    span: 1:1-1:11,
}
---

[TestArrayVsIndexAccess/tuple - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            span: 1:2-1:8,
        },
    },
    span: 1:1-1:9,
}
---

[TestArrayVsIndexAccess/empty_tuple - 1]
&dts_parser.TupleType{
    span: 1:1-1:3,
}
---

[TestArrayTypes/readonly_string_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:10-1:16,
    },
    Readonly: true,
    span: 1:1-1:18,
}
---

[TestArrayTypes/readonly_number_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 1:10-1:16,
    },
    Readonly: true,
    span: 1:1-1:18,
}
---

[TestArrayTypes/readonly_nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:10-1:16,
        },
        Readonly: true,
        span: 1:1-1:18,
    },
    span: 1:1-1:20,
}
---
